<resources>
    <string name="app_name">CortinApp</string>
    <string name="registro_ventas">Sales Record</string>
    <string name="registro_vendedor">Register Seller</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="login">LOGIN</string>
    <string name="logo">CortinApp Logo</string>
    <string name="email">Email</string>
    <!-- Client -->
    <string name="text_Cliente">Client Name</string>
    <string name="hint_Cliente">Client Name</string>
    <string name="text_CedulaCliente">Client ID</string>
    <string name="hint_CedulaCliente">ID Number</string>
    <string name="text_Direccion">Address</string>
    <string name="hint_Direccion">Client Address</string>
    <string name="text_Telefono">Phone</string>
    <string name="hint_Telefono">Client Phone</string>
    <string name="text_Latitud">Latitude</string>
    <string name="hint_Latitud">Coord. Latitude</string>
    <string name="text_Longitud">Longitude</string>
    <string name="hint_Longitud">Coord. Longitude</string>

    <!-- Seller -->
    <string name="text_CedulaVendedor">seller\'s ID</string>
    <string name="hint_CedulaVendedor">ID</string>
    <string name="text_CorreoVendedor">Email Address</string>
    <string name="hint_CorreoVendedor">email@domain.com</string>
    <string name="text_ContVendedor">Password</string>
    <string name="hint_ContVendedor">Password</string>

    <!-- Sales -->
    <string name="text_CodigoVenta">Sales Code</string>
    <string name="hint_CodigoVenta">Sales Code</string>
    <string name="text_fechaVenta">Sales Date</string>
    <string name="hint_fechaVenta">Sales Date</string>
    <string name="text_vendedor">Seller\'s Name</string>
    <string name="hint_Vendedor">Seller\'s Name</string>
    <string name="button_AgregarVenta">Add Sale</string>
    <string name="button_TerminarVenta">Finish Sale</string>

    <!-- Items -->
    <string name="text_Articulo">Curtain Type</string>
    <string name="hint_Articulo">Curtain Type Description</string>
    <string name="text_Ancho">Width (m)</string>
    <string name="hint_Ancho">Width in meters</string>
    <string name="text_Alto">Height (m)</string>
    <string name="hint_Alto">Height in meters</string>
    <string name="text_AreaTotal">Total Area</string>
    <string name="hint_AreaTotal">Total Area Calculation</string>
    <string name="text_Precio">Price</string>
    <string name="hint_Precio">Price Calculation</string>
    <string name="text_CodigoArticulo">Item Code</string>
    <string name="hint_CodigoArticulo">Curtain Code</string>
    <string name="text_ColorCortina">Color</string>
    <string name="hint_ColorCortina">Curtain Color</string>
    <string name="text_Valorm2">Value (per square meter)</string>
    <string name="hint_Valorm2">Value per square meter</string>
    <string name="registro_articulo">Record Item</string>

    <!--Abonos-->
    <string name="registro_abono">Record Subscription</string>
    <string name="saldo_actual">Current balance</string>
    <string name="fecha_abono">Subscription Date</string>
    <string name="valor_abono">Subscription Worth</string>
    <string name="Cancelar">Cancel</string>
    <string name="Guardar">Save</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Menu-->
    <string name="menu_registrovendedor">Registrar vendedor</string>
    <string name="menu_registroarticulo">Registrar artículo</string>
    <string name="menu_registroventa">Registrar venta</string>
    <string name="menu_registroabono">Registrar abono</string>
    <string name="menu_listaVentas">Sales List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>