<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="289dp"
        android:layout_height="149dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/cortina" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/corner_linearlayuot"
         android:orientation="vertical"
         android:gravity="center_vertical">

        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:text="@string/username"
             android:textColor="@color/white"
             android:textSize="25sp" />
-->
         <EditText
             android:id="@+id/edtUsername"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="25dp"
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/img_email"
             android:drawablePadding="12dp"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20dp"/>

        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:text="@string/password"
             android:textColor="@color/white"
             android:textSize="25sp" />-->

         <EditText
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="30dp"
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/img_password"
             android:drawablePadding="12dp"
             android:hint="@string/your_password"
             android:inputType="textPassword"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20dp" />

         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="19dp"
             android:layout_marginRight="16dp"
             android:backgroundTint="@color/white"
             android:text="@string/login"
             android:onClick="onLogin"
             android:textColor="@color/blue"
             android:textSize="15sp"
             app:cornerRadius="40dp" />
     </LinearLayout>




</LinearLayout>